# simple_full_stack_inference

./: .gitignore  Qwen_vllm_baseline.md  README.md  agent_launcher.example.py  anyscale_deepseek_deploy.py  benchmark.py  complete_results.md  deepseek-pd-disaggregated.md  deployment.py  gateway_config.example.yaml  gateway_config.yaml  gateway_launcher.example.py  gateway_launcher.py  lmcache_config.yaml  load_test.py  locustfile.py  main.py  metrics_app.py  modal_sglang_deploy.py  modal_vllm_deploy.py  modal_vllm_lm_cache_qwen.py  modal_vllm_lmcache_deploy.py  moe-ray-deepseek-loadtest-result.md  nginx-lb.conf  pyproject.toml  results.md  service_config.yaml  sweep.sh
monitoring/: docker-compose.yml  prometheus.yml  tempo.yml
monitoring/grafana/provisioning/datasources/: datasources.yaml
monitoring/grafana_dashboards/: LLM dashboard-1775000226357.json  dashboards.yaml
