[project]
name = "simple-full-stack-inference"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anyscale>=0.26.92",
    "ddgs>=9.13.0",
    "duckduckgo-search>=8.1.1",
    "httpx>=0.28.1",
    "langchain-community>=0.3",
    "langchain-openai>=1.1.12",
    "langgraph>=1.1.6",
    "locust>=2.43.4",
    "modal>=1.4.0",
    "prometheus-client>=0.21.0",
    "simple-ai-gateway>=0.1.3",
    "uvicorn>=0.42.0",
]

[project.scripts]
simple-ai-gateway = "gateway_launcher:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["agent_launcher", "gateway_launcher", "main", "modal_sglang_deploy", "modal_vllm_deploy"]

[tool.uv]
package = true
